--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
-		"@tailwindcss/forms": "^0.5.9"
+		"@prisma/client": "^6.2.1",
+		"@tailwindcss/forms": "^0.5.9",
+		"openai": "^4.78.1",
+		"p-queue": "^8.0.1",
+		"prisma": "^6.2.1",
+		"zod": "^3.24.1"
 	}
 }
