--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"dependencies": {
 		"@prisma/client": "^6.2.1",
 		"@tailwindcss/forms": "^0.5.9",
+		"google-search-results-nodejs": "^2.1.0",
 		"newrelic": "^12.10.0",
 		"openai": "^4.78.1",
 		"p-queue": "^8.0.1",
